# Discord_Bot

./: .gitignore  pyproject.toml
src/discord_api/: discord_client.py
src/openai_api/: openai_connection.py
src/openweather_api/: current_weather.py
